Ainda a primeira mudança
13/07, fiz alguns pequenos ajustes quanto ao index e criei a base de algumas outras páginas para me adiantar.  Ainda está COMPLETAMENTE SEM CSS e sem SEMANTICA. possivelmente a sequência do projeto sera a seguinte:
1- Criação de todas as páginas em html
2- Revisão do Código
3- Corrigir a semântica html
4- Javascript e CSS em uma sequência ainda não planejada

--- a/SolarScreen/Home/index.html
+++ b/SolarScreen/Home/index.html
@@ -69,6 +69,7 @@
 
     <div> <! -- PLANOS -->
         <h2>PLANOS DISPONIVEIS</h2>
+        <! -- PENDENTE MUDANÇAS! NAO FAÇO IDEIA COMO REALIZAR AQUELE LAYOUT (NO MOMENTO) DOS PLANOS EM HTML -->
         <p id="Subscriptions-Description">O preço pode sofrer alterações, com aviso prévio aos assinantes.</p>
     </div>
 
