--- a/SolarScreen/Login/Login.html
+++ b/SolarScreen/Login/Login.html
@@ -11,17 +11,17 @@
     <h2>FAZER LOGIN</h2>
     <! -- Divisoria -->
     <div>
-        <form>
+        <form class="Form-Login">
             <input>
             <input>
         </form>
     </div>
 
     <p>ESQUECEU A SENHA?</p>
-    <button></button>
+    <button class="Button-Strong">LOGIN</button>
     <h4>ou</h4>
     <! -- Divisoria -->
-    <button></button>
+    <button class="Button-Weaker">CRIAR CONTA</button>
 
     <! -- Rodape Modificado-->
 </body>
