--- a/SolarScreen/Register/RegisterP1.html
+++ b/SolarScreen/Register/RegisterP1.html
@@ -19,7 +19,7 @@
     <h2>Realizar o pagamento</h2>
     <! -- Divisoria -->
 
-    <button>CONTINUAR</button>
+    <button class="Button-Strong">CONTINUAR</button>
 
     <! -- Rodape modificado-->
 </body>
