--- a/SolarScreen/Register/RegisterP2.html
+++ b/SolarScreen/Register/RegisterP2.html
@@ -11,13 +11,13 @@
     <h2>CRIAR CONTA - ETAPA 1</h2>
     <! -- Divisoria -->
     <div>
-        <form>
+        <form class="Form-Register">
             <input>
             <input>
         </form>
     </div>
     <p><a href="#">JÁ TEM CONTA?</a></p>
-    <button>CADASTRAR</button>
+    <button class="Button-Strong">CADASTRAR</button>
 
     <! -- Rodape modificado-->
 </body>
