--- a/SolarScreen/Home/index.html
+++ b/SolarScreen/Home/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>SolarScreen - Homepage</title>
+    <link type="text/css" rel="stylesheet" href="/SolarScreen/CSSs/HomePage.css">
+    <link type="text/css" rel="stylesheet" href="/SolarScreen/CSSs/NavBar.css">
+    <link type="text/css" rel="stylesheet" href="/SolarScreen/CSSs/Footer.css">
 </head>
 
 <body>
@@ -74,7 +77,7 @@
     </div>
 
     <footer> <! -- Rodape -->
-        <nav>
+        <nav class="Footer">
             <h1 class="SolarScreen-Title">SOLARSCREEN</h1>
             <ul>
                 <li><h4>SUPORTE</h4></li>
