--- a/SolarScreen/Login/Login.html
+++ b/SolarScreen/Login/Login.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>SolarScreen - Login</title>
+    <link type="text/css" rel="stylesheet" href="/SolarScreen/CSSs/Register&Login.css">
+    <link type="text/css" rel="stylesheet" href="/SolarScreen/CSSs/NavBar.css">
+    <link type="text/css" rel="stylesheet" href="/SolarScreen/CSSs/Footer.css">
 </head>
 
 <body>
@@ -12,8 +15,8 @@
     <! -- Divisoria -->
     <div>
         <form class="Form-Login">
-            <input>
-            <input>
+            <input required> <! -- Email -->
+            <input required> <! -- Senha -->
         </form>
     </div>
 
