--- a/SolarScreen/Register/RegisterP1.html
+++ b/SolarScreen/Register/RegisterP1.html
@@ -2,7 +2,10 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <title>SolarScreen - REGISTER GUIDE</title>
+    <title>SolarScreen - Register Guide</title>
+    <link type="text/css" rel="stylesheet" href="/SolarScreen/CSSs/Register&Login.css">
+    <link type="text/css" rel="stylesheet" href="/SolarScreen/CSSs/NavBar.css">
+    <link type="text/css" rel="stylesheet" href="/SolarScreen/CSSs/Footer.css">
 </head>
 
 <body>
@@ -12,6 +15,7 @@
     <h2>Criar uma conta</h2>
     <! -- Divisoria -->
     <! -- INSERIR LEITURA DE CONTRATO -->
+    <! -- INSERIR INFORME OS DADOS -->
     <img src="" alt="">
     <h2>Escolher uma assinatura</h2>
     <! -- Divisoria -->
