--- a/SolarScreen/Register/RegisterP2.html
+++ b/SolarScreen/Register/RegisterP2.html
@@ -2,7 +2,10 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <title>SolarScreen - REGISTER CREDENTIALS</title>
+    <title>SolarScreen - Register Credentials</title>
+    <link type="text/css" rel="stylesheet" href="/SolarScreen/CSSs/Register&Login.css">
+    <link type="text/css" rel="stylesheet" href="/SolarScreen/CSSs/NavBar.css">
+    <link type="text/css" rel="stylesheet" href="/SolarScreen/CSSs/Footer.css">
 </head>
 
 <body>
@@ -11,9 +14,11 @@
     <h2>CRIAR CONTA - ETAPA 1</h2>
     <! -- Divisoria -->
     <div>
+        <h3>Cadastrar</h3>
+        <p>Vamos precisar que você nos informe um email e que crie uma senha que sera usada quando você quiser acessar sua conta</p>
         <form class="Form-Register">
-            <input>
-            <input>
+            <input required> <! -- email -->
+            <input required> <! -- senha -->
         </form>
     </div>
     <p><a href="#">JÁ TEM CONTA?</a></p>
