--- a/SolarScreen/Register/RegisterP3.html
+++ b/SolarScreen/Register/RegisterP3.html
@@ -2,7 +2,11 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <title>SolarScreen - REGISTER CONTRACT</title>
+    <title>SolarScreen - Register Contract</title>
+    <link type="text/css" rel="stylesheet" href="/SolarScreen/CSSs/Register&Login.css">
+    <link type="text/css" rel="stylesheet" href="/SolarScreen/CSSs/NavBar.css">
+    <link type="text/css" rel="stylesheet" href="/SolarScreen/CSSs/Footer.css">
+    <link type="text/css" rel="stylesheet" href="/SolarScreen/CSSs/TextFormat.css">
 </head>
 
 <body>
@@ -12,6 +16,7 @@
     <! -- Divisoria -->
     <div>
         <h3>Termos e condições</h3>
+        <p></p>
         <div class="Terms-Box">
             <p>TermosLorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam scelerisque, leo id porttitor eleifend, tortor purus eleifend ipsum, non imperdiet eros lorem a lorem. Duis eu lacus fermentum, interdum nunc a, accumsan neque. Sed imperdiet interdum vulputate. Morbi elementum luctus suscipit. Nullam sit amet sagittis libero. Proin ut rutrum diam, in imperdiet libero. Ut commodo, justo ac posuere accumsan, nisi magna rutrum lacus, non scelerisque augue justo sed arcu. Integer ornare venenatis lacus. Suspendisse consequat nibh sed quam condimentum, nec tristique quam mattis. In imperdiet placerat orci, a dictum sapien dictum a. Suspendisse ut tempor lorem. Nullam tempus sem a vestibulum sodales. Proin ultrices felis ut mauris venenatis, quis pretium augue ornare. In hendrerit eros tellus, vel hendrerit odio finibus et. Fusce feugiat tellus neque, a fermentum risus accumsan ut. Sed porttitor turpis a metus dignissim, quis ultricies lorem sodales. Donec placerat elit ac ex efficitur, eget placerat metus tempus. Etiam aliquet dolor ante, vel elementum enim consectetur id. Fusce vulputate risus a molestie pretium. Praesent facilisis enim eget augue commodo congue. Pellentesque sit amet molestie sem. Proin suscipit tincidunt ex, nec lacinia diam bibendum non. Morbi ac molestie est. Etiam quis nisi at mauris commodo mollis. Praesent at nulla ac nisi scelerisque vehicula ut nec purus. Phasellus ultricies nibh id aliquet suscipit. Proin non massa quis velit volutpat cursus. In dui dui, malesuada et semper ut, blandit eu felis. Cras consequat vulputate mauris, sit amet fringilla est auctor ut. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. In bibendum sagittis massa eu porta. Aliquam varius libero in est commodo, ac feugiat nunc cursus. Cras mattis bibendum orci ut tincidunt. Donec gravida laoreet pellentesque. Mauris ac porttitor lorem, in porttitor nunc. In lobortis at mauris sed ornare. Phasellus nunc nunc, molestie at purus rhoncus, interdum venenatis sem. Sed pellentesque scelerisque elit. Donec sed bibendum augue. Morbi ac sem ut ante laoreet vehicula. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas pulvinar aliquet nisl, eu iaculis velit vehicula nec. Sed mattis pharetra risus id dictum. Fusce cursus turpis non neque ultricies rhoncus ac maximus dui. Nam justo sem, venenatis mollis tortor sed, sagittis venenatis nulla. Duis eleifend, nunc eget consequat facilisis, eros enim placerat quam, eget convallis sapien dolor vel magna. Duis vitae justo et eros lacinia auctor sed quis nunc. Fusce quis ex eu mauris mattis porttitor. Nam sollicitudin luctus nulla. Duis tempus, diam vel fermentum suscipit, sapien erat tincidunt lectus, at gravida odio tortor eu risus. Praesent ac posuere justo, quis suscipit urna. Sed porta nisl nisl, id lobortis justo lacinia non. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum porttitor porttitor ligula. Etiam dignissim et diam at egestas. Pellentesque et est neque. Quisque massa lectus, vulputate non imperdiet nec, hendrerit sed lacus. Fusce convallis leo lectus, sit amet venenatis ante sagittis eu. Suspendisse lacinia egestas dolor feugiat laoreet. Quisque urna odio, porta eget ullamcorper id, ultrices eget ligula. Etiam vestibulum ultrices tristique. Maecenas a consectetur nunc, in molestie mauris.</p>
         </div>
